Make leaf modules java17 forward compatible