@@ -79,3 +79,8 @@ shadowJar {
 // By default shadow doesn't configure the build task to depend on the shadowJar task.
 tasks.build.dependsOn tasks.shadowJar
 
+test {
+  if (JavaVersion.current() >= JavaVersion.VERSION_1_9){
+    jvmArgs '--add-opens=java.base/java.net=ALL-UNNAMED'
+  }
+}
